--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "main"
-version = "1.0.0"
+name = "python-main"
+version = "0.0.1"
 description = "@main decorator which runs the tagged function if the current module is being run. No more if __name__ == \"__main__\":. That's it!"
 authors = ["Cadu <cadu.coelho@gmail.com>"]
 license = "BSD"
