--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "main"
+name = "python-main"
 version = "1.0.0"
 description = "@main decorator which runs the tagged function if the current module is being run. No more if __name__ == \"__main__\":. That's it!"
 authors = ["Cadu <cadu.coelho@gmail.com>"]
