--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,16 +13,10 @@ jobs:
     name: Build and Publish
     runs-on: ubuntu-22.04
 
-    strategy:
-      matrix:
-        python-versions: [3.12.2]
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-versions }}
 
       - name: Install dependencies
         run: |
@@ -30,20 +24,21 @@ jobs:
           pip install poetry
 
       - name: Set version from GITHUB_REF
-        run: >-
+        run: |
           # GITHUB_REF will be `refs/tags/v1.2.3` for a tag named "v1.2.3"
           # we strip the `refs/tags/` part to get the version number
           # we also strip "v" from the version number, if it exists, getting "1.2.3"
+          echo "GITHUB_REF: ${{ github.ref }}"
           export VERSION=$(echo ${{ github.ref }} | sed -e 's,.*/\(.*\),\1,' -e 's/^v//')
-          echo Setting version to $VERSION
+          echo Setting version to $VERSION using poetry
           poetry version $VERSION
 
       - name: Build wheels and source tarball
-        run: >-
+        run: |
           poetry build
 
       - name: show temporary files
-        run: >-
+        run: |
           ls -l
 
       - name: publish to PyPI
